refactor: removendo tratamento de erro em casos de busca e manipulação de projetos e tarefas, simplificando a lógica de execução nas classes de uso
