# src/modules/users/infra/http/users.controller.ts
@@ -3,15 +3,18 @@ import { container } from "tsyringe";
 
 // DTOs
 import { IInputCreateUserDTO, IOutputCreateUserDTO } from "@modules/users/dtos/createUserDTO";
+import { IInputAuthUserDTO, IOutputAuthUserDTO } from "@modules/users/dtos/authUserDTO";
 import { IOutputUpdateUserDTO } from "@modules/users/dtos/updateUserDTO";
 import { IOutputDeleteUserDTO } from "@modules/users/dtos/deleteUserDTO";
 import { IOutputFindUserByIdDTO } from "@modules/users/dtos/findUsersDTO";
 
 // UseCases
 import { CreateUserUseCase } from "@modules/users/UseCases/CreateUserUseCase";
+import { AuthUsersUseCase } from "@modules/users/UseCases/AuthUsersUseCase";
 import { UpdateUserUseCase } from "@modules/users/UseCases/UpdateUserUseCase";
 import { DeleteUserUseCase } from "@modules/users/UseCases/DeleteUserUseCase";
 import { FindUserByIdUseCase } from "@modules/users/UseCases/FindUserByIdUseCase";
+import { User } from "@shared/infra/sequelize/models";
 
 export class CreateUserController {
   async handle(req: Request, res: Response): Promise<Response> {
@@ -27,9 +30,22 @@ export class CreateUserController {
   }
 }
 
+export class AuthUserController {
+  async handle(req: Request, res: Response): Promise<Response> {
+    const { email, password }: IInputAuthUserDTO = req.body;
+    const authUsersUseCase = container.resolve(AuthUsersUseCase);
+    const result: IOutputAuthUserDTO = await authUsersUseCase.execute({
+      email,
+      password,
+    });
+
+    return res.status(200).json(result);
+  }
+}
+
 export class UpdateUserController {
   async handle(req: Request, res: Response): Promise<Response> {
-    const { id } = req.params;
+    const { id } = req.user as User;
     const { name, email, password } = req.body;
     const updateUserUseCase = container.resolve(UpdateUserUseCase);
     const result: IOutputUpdateUserDTO = await updateUserUseCase.execute({
@@ -44,7 +60,7 @@ export class UpdateUserController {
 
 export class DeleteUserController {
   async handle(req: Request, res: Response): Promise<Response> {
-    const { id } = req.params;
+    const { id } = req.user as User;
     const deleteUserUseCase = container.resolve(DeleteUserUseCase);
     const result: IOutputDeleteUserDTO = await deleteUserUseCase.execute({ id });
     return res.status(200).json(result);
@@ -53,7 +69,7 @@ export class DeleteUserController {
 
 export class FindUserByIdController {
   async handle(req: Request, res: Response): Promise<Response> {
-    const { id } = req.params;
+    const { id } = req.user as User;
     const findUserByIdUseCase = container.resolve(FindUserByIdUseCase);
     const result: IOutputFindUserByIdDTO = await findUserByIdUseCase.execute({ id });
     return res.status(200).json(result);
